# git-derivative

./: .gitderivative  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
resources/: hook.sh
src/: args.rs  git.rs  hook.rs  lib.rs  main.rs
src/derivatives/: file.rs  mod.rs  updater.rs
