[package]
name = "git-derivative"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.0-rc.8", features = ["derive"] }
color-eyre = "0.5.11"
git-config = "0.1.9"
git2 = "0.13.25"
indexmap = { version = "1.7.0", features = ["serde"] }
miette = { version = "3.2.0", features = ["fancy"] }
relative-path = { version = "1.6.0", features = ["serde"] }
serde = { version = "1.0.132", features = ["derive"] }
thiserror = "1.0.30"
tinytemplate = "1.2.1"
toml = { version = "0.5.8", features = ["indexmap"] }

[features]
